[package]
name = "kalshi-arb"
version = "0.1.0"
edition = "2021"

# Separate binaries for BTC, ETH, and SOL trading bots (RL-based)
[[bin]]
name = "kalshi-arb-btc"
path = "src/main.rs"

[[bin]]
name = "kalshi-arb-eth"
path = "src/main.rs"

[[bin]]
name = "kalshi-arb-sol"
path = "src/main.rs"

[[bin]]
name = "kalshi-arb-xrp"
path = "src/main.rs"

# Rule-based BTC bot for A/B testing against RL
[[bin]]
name = "kalshi-arb-rulebased"
path = "src/main_rulebased.rs"

# Bucket 9 maximizer bots - unlimited trades at $0.90-$0.99
[[bin]]
name = "kalshi-arb-bucket9-btc"
path = "src/main_bucket9.rs"

[[bin]]
name = "kalshi-arb-bucket9-eth"
path = "src/main_bucket9.rs"

[[bin]]
name = "kalshi-arb-bucket9-sol"
path = "src/main_bucket9.rs"

[[bin]]
name = "kalshi-arb-bucket9-xrp"
path = "src/main_bucket9.rs"

[dependencies]

# --- Async runtime -----------------------------------------------------------
tokio = { version = "1", features = ["full"] }

# --- Serialization -----------------------------------------------------------
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# --- HTTP client -------------------------------------------------------------
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# --- WebSockets --------------------------------------------------------------
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# --- Futures combinators ----------------------------------------------------
futures = "0.3"

# --- ML inference ------------------------------------------------------------
ort = { version = "2.0.0-rc.11", features = ["coreml"] }

# --- Timestamps --------------------------------------------------------------
chrono = { version = "0.4", features = ["serde"] }

# --- CSV recording -----------------------------------------------------------
csv = "1"

# --- SQLite PnL tracking -----------------------------------------------------
rusqlite = { version = "0.31", features = ["bundled"] }

# --- Kalshi RSA-PSS authentication -------------------------------------------
rsa    = { version = "0.9", features = ["sha2", "getrandom"] }
sha2   = "0.10"
base64 = "0.22"
rand   = "0.8"
http   = "1"

# --- Error handling ----------------------------------------------------------
anyhow = "1"

# --- Environment variables ---------------------------------------------------
dotenvy = "0.15"
hmac = "0.12.1"
hex = "0.4.3"
